--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,26 @@ section{
     padding: 60px;
 }
 
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+}
+
+.hero-form {
+    background-color: #fce138;
+    color: #024e76;
+    border: #024e76 3px solid;
+    padding: 20px;
+    width: 500px;
+}
+
+.hero-form button{
+    color:  #fce138;
+    background-color: #024e76;
+}
+
 footer h2{
     display: inline;
     color: #024e76;
