--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,14 +60,18 @@ section{
     background-size: cover;
     background-position: center;
     height: 600px;
+    position: relative;
 }
 
 .hero-form {
-    background-color: #fce138;
-    color: #024e76;
     border: #024e76 3px solid;
+    background-color: #fce138;
     padding: 20px;
     width: 500px;
+    color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 }
 
 .hero-form button{
