--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,16 +45,12 @@ header nav ul li a{
     font-size: 22px;
 }
 
-footer {
-    background: #fce138;
-    width: 100%;
-    padding: 40px 35px;
-}
-
+/* apply general styles to all sections*/
 section{
     padding: 60px;
 }
 
+/*apply style to the hero */
 .hero {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
@@ -63,6 +59,7 @@ section{
     position: relative;
 }
 
+/*apply style to the form within the hero */
 .hero-form {
     border: #024e76 3px solid;
     background-color: #fce138;
@@ -101,6 +98,35 @@ section{
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+}
+/*apply styles to specific sections*/
+.intro{
+    text-align: center;
+}
+
+.intro h2{
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+    display: inline-block;
+}
+
+.intro p{
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+}
+
+/*apply styles to the footer*/
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
 }
 
 footer h2{
