--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,19 +99,29 @@ section{
     padding: 10px 20px;
     font-size: 16px;
 }
-/*apply styles to specific sections*/
-.intro{
-    text-align: center;
-}
 
-.intro h2{
+/*apply styles to specific sections*/
+
+/*apply style to intro section*/
+.section-title {
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
     padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
     display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border{
+    border-color: #fce138;
+}
+
+.secondary-border{
+    border-color: #39a6b2;
+}
+
+.intro{
+    text-align: center;
 }
 
 .intro p{
@@ -120,6 +130,36 @@ section{
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+}
+
+/*apply style to the steps section*/
+.steps{
+    text-align: center;
+    background: #fce138;
+}
+
+.steps div{
+    margin-bottom: 80px;
+}
+
+.steps img{
+    width: 15%;
+    margin: 10px 0;
+}
+
+.steps h3{
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px; 
+}
+
+.steps span{
+    font-size: 38px;
+}
+
+.steps p{
+    color: #39a6b2;
+    font-size: 23px;
 }
 
 /*apply styles to the footer*/
