--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,8 +101,7 @@ section{
 }
 
 /*apply styles to specific sections*/
-
-/*apply style to intro section*/
+/*apply general style to sections*/
 .section-title {
     font-size: 55px;
     color: #024e76;
@@ -120,6 +119,7 @@ section{
     border-color: #39a6b2;
 }
 
+/*apply style to the intro section*/
 .intro{
     text-align: center;
 }
@@ -161,6 +161,9 @@ section{
     color: #39a6b2;
     font-size: 23px;
 }
+
+/*apply style to the trainers section*/
+
 
 /*apply styles to the footer*/
 footer {
