--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,10 +127,11 @@ section{
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border{
@@ -142,21 +143,17 @@ section{
 }
 
 /*apply style to the intro section*/
-.intro{
-    text-align: center;
-}
-
 .intro p{
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /*apply style to the steps section*/
 .steps{
-    text-align: center;
     background: #fce138;
 }
 
@@ -187,7 +184,7 @@ section{
 /*apply style to the trainers section*/
 
 .trainers{/*trainers is section*/
-    text-align: center;
+
 }
 
 .trainer{/*trainer is article*/
@@ -224,17 +221,9 @@ section{
     font-size: 17px;
     line-height: 1.3;
 }
-.text-left{
-    text-align: left;
-}
-
-.text-right{
-    text-align: right;
-}
 
 /*apply styles to the contact section*/
 .contact{
-    text-align: center;
     background-color: #024e76;
 }
 
@@ -294,4 +283,17 @@ footer div{
 
 footer a{
     color: #024e76;
+}
+
+/*Utility styles*/
+.text-left{
+    text-align: left;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.flex-row{
+    display: flex;
 }
