--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ header nav ul{
 }
 
 header nav ul li a{
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -64,6 +64,7 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 /*apply style to the hero-cta section*/
@@ -73,7 +74,7 @@ section{
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2{
@@ -125,7 +126,7 @@ section{
 /*apply styles to specific sections*/
 /*apply general style to sections*/
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -345,4 +346,19 @@ footer a{
 
 .flex-row{
     display: flex;
+}
+
+/*only for screens smaller than 980px*/
+@media screen and (max-width: 980px){
+
+}
+
+/*only for screens smaller than 768px*/
+@media screen and (max-width: 768px){
+
+}
+
+/*only for screens smaller than 575px*/
+@media screen and (max-width: 575px){
+
 }
