--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,7 +246,21 @@ section{
     font-size: 17px;
 }
 
-/*apply styles to the contact section*/
+/*apply styles to the service plans section*/
+.service-grid-container{
+    display: grid;
+}
+
+.service-grid-item{
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+
+/*apply styles to the reach out section*/
 .contact{
     background-color: #024e76;
 }
