--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,27 +327,98 @@ section{
     flex: 1;
 }
 
-.trainer img{
+.trainer:hover .trainer-img::after{
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.trainer-img{
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
+}
+
+.trainer-img::after{
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: rgba(252, 225, 56, 0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(252, 225, 56, 0.3), #024e76);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.trainer-img h3{
+    font-size: 28px;
+    margin-bottom: 5px;
+    position: relative;
+    z-index: 1;
+    top: 200px;
+    opacity: 0;
+    transition: 0.6s;
+}
+
+.trainer-img h4{
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+    position: relative;
+    z-index: 1;
+    top: 200px;
+    opacity: 0;
+    transition: 0.6s;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4{
+    opacity: 1;
+    transition: 0.5s;
+    top: 0;
+}
+
+.trainer:hover .trainer-img h4{
+    transition-delay: 0.1s;
 }
 
 .trainer-bio{/*trainer-bio is div around text*/
     padding: 25px;
     line-height: 1.3;
+
 }
 
 .trainer-bio h3{
     font-size: 28px;
+    display: none;
 }
 
 .trainer-bio h4{
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 
 .trainer-bio p{
     font-size: 17px;
+}
+
+.trainer-1{
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2{
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3{
+    background-image: url("../images/trainer-3.jpg");
 }
 
 /*apply styles to the service plans section*/
@@ -611,6 +682,14 @@ footer a{
         writing-mode: unset;
         grid-column: 1 / -1;
         grid-row: -1;
+    }
+
+    .trainer-img h3, .trainer-img h4, .trainer-img::after{
+        display: none;
+    }
+
+    .trainer-bio h3, .trainer-bio h4{
+        display: block;
     }
 
 }
